--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "asus/fiver",
+    "name": "intishar/fiver",
     "description": "This is xlsx exporter",
     "type": "library",
     "license": "MIT",
